--- a/factgenie/config.yml
+++ b/factgenie/config.yml
@@ -2,7 +2,7 @@
 allow_annotate: true 
 allow_browse: true
 debug: true
-host_prefix: ""
+host_prefix: "/nlg/factgenie"
 default_error_categories:
   - name: "Incorrect"
     color: "#ffbcbc"
