--- a/factgenie/llm-eval/ollama-llama3.yaml
+++ b/factgenie/llm-eval/ollama-llama3.yaml
@@ -1,3 +1,6 @@
+type: ollama
+model: llama3
+api_url: http://tdll-3gpu2.ufal.hide.ms.mff.cuni.cz:11434/api/generate
 model_args:
   max_tokens: 1024
   num_beams: 1
