--- a/factgenie/llm-eval/openai-gpt3.5.yaml
+++ b/factgenie/llm-eval/openai-gpt3.5.yaml
@@ -1,3 +1,6 @@
+type: openai
+model: gpt-3.5-turbo-1106
+# model: "gpt-4-1106-preview"
 system_msg: "You are an expert data-to-text error annotation system. You undestand structured data and you can correcly operate with units and numerical values. You are designed to output token-level annotations in JSON."
 prompt_template: |
   Given the data:
