--- a/factgenie/llm-eval/ollama-qwen2-logicnlg.yaml
+++ b/factgenie/llm-eval/ollama-qwen2-logicnlg.yaml
@@ -1,5 +1,7 @@
-type: ollama
-metric_name_suffix: -logicnlg
+type: ollama-logicnlg
+# valid values to_string (produces zero annotations), to_json ?, to_markdown ?
+# note that the example needs to be updated according to the table_str_f MANUALLY
+table_str_f: to_json
 annotation_key: "annotations"
 model: qwen2:72b
 api_url: http://tdll-3gpu4.ufal.hide.ms.mff.cuni.cz:11434/api/generate
@@ -11,9 +13,9 @@ model_args:
   top_k: 0.0
   do_sample: false 
   seed: 424242
-system_msg: "You are an expert linguist and data scientiest focusing on the data-to-text annotation systems. You understand structured data and you correcly operate with units and numerical values. You are designed to output token-level annotations in JSON."
+system_msg: "You are an expert linguist and data scientiest focusing on the data-to-text annotation systems. You understand tabular data and you correcly operate with units and numerical values. You are designed to output token-level annotations in JSON."
 prompt_template: |
-  Given the data in the table below:
+  Given the table title and table:
   ```
   {data}
   ```
@@ -29,18 +31,19 @@ prompt_template: |
 
   The list should be sorted by the position of the annotation in the text.
 
+  Also output your confidence how well you understood the task, the table and the text. Classify your confidence as "confident", "unsure", "I have no idea" and provide feedback when you are confident. 
+
   *Example:*
-  data:
+  table:
   ```
   Table title: figure skating at the 1964 winter olympics
-  Table:
-  [['rank', 'name', 'nation', 'points', 'places'], ['1', 'sjoukje dijkstra', 'netherlands', '2018.5', '9'], ['2', 'regine heitzer', 'austria', '1945.5', '22'], ['3', 'peggy fleming', 'united states', '1819.6', '59'], ['4', 'christine haigler', 'united states', '1803.8', '74'], ['5', 'albertina noyes', 'united states', '1798.9', '73']]
+  [{{"rank":"1","name":"sjoukje dijkstra","nation":"netherlands","points":"2018.5","places":"9"}},{{"rank":"2","name":"regine heitzer","nation":"austria","points":"1945.5","places":"22"}},{{"rank":"3","name":"peggy fleming","nation":"united states","points":"1819.6","places":"59"}},{{"rank":"4","name":"christine haigler","nation":"united states","points":"1803.8","places":"74"}},{{"rank":"5","name":"albertina noyes","nation":"united states","points":"1798.9","places":"73"}}]
   ```
   text:
   ```
   Four women competed for the United States for figure skating in the 1964 Winter Olympics. The data comes from table Figure Skating at the 1964 winter games.
   ```
   output:
-  ```{{ "annotations": [{{"reason": "The table contains only 3 competitors from united states", "text": "Four", "type": 0}}, {{"reason": "Fans of United States want to know how many representatives they have in Olympic Games and for people it is hard to find all occurances. Especially in a large table.", "text": "Four women competed for the United States", "type": 1}}, {{"reason": "The note is superfluous", "text": "The data comes from table Figure Skating at the 1964 winter games.", type: 3}}] }}
+  ```{{ "annotations": [{{"reason": "The table contains only 3 competitors from united states", "text": "Four", "type": 0}}, {{"reason": "Fans of United States want to know how many representatives they have in Olympic Games and for people it is hard to find all occurances. Especially in a large table.", "text": "Four women competed for the United States", "type": 1}}, {{"reason": "The note is superfluous", "text": "The data comes from table Figure Skating at the 1964 winter games.", type: 3}}], "confidence": "confident", "feedback": "" }}
   ```
   Note that some details may not be mentioned in the text: do not count omissions as errors. Also do not be too strict: some facts can be less specific than in the data (rounded values, shortened or abbreviated text, etc.), do not count these as errors. It is ok not to report anything and produce empty list. Mark interesting only truly interesting parts and similarly mark obvious phrases only if they are trully boring and obvious.
