Correctly ignore only the generated campaign files, not the other templates

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,5 @@ build
 venv/
 wiki
 factgenie/annotations
-factgenie/templates
+factgenie/templates/campaigns/*
+!factgenie/templates/campaigns/*.*
