--- a/factgenie/config/llm-eval/ollama-llama3-eval.yaml
+++ b/factgenie/config/llm-eval/ollama-llama3-eval.yaml
@@ -1,10 +1,10 @@
-type: ollama
+type: ollama_metric
 model: llama3
 # You can run ollama alson on other machine than factgenie 
 #  e.g. we run it on a machine tdll-3gpu3 and access it from any machine which is withing the same firewall
-#  in that case we use api_url: http://tdll-3gpu3.ufal.hide.ms.mff.cuni.cz:11434/api/generate
+#  in that case we use api_url: http://tdll-3gpu3.ufal.hide.ms.mff.cuni.cz:11434/api/
 # If you run ollama at the same machine as factgenie let's use just localhost.
-api_url: http://localhost:11434/api/generate
+api_url: http://localhost:11434/api/
 model_args:
   max_tokens: 1024
   num_beams: 1
