Add xsum-debug dataset with 5 examples for debugging purposes

--- a/factgenie/loaders/datasets.yml
+++ b/factgenie/loaders/datasets.yml
@@ -70,3 +70,10 @@ datasets:
     splits:
     - test
     type: text
+  xsum-debug:
+    class: base.PlainTextDataset
+    description: ''
+    enabled: true
+    splits:
+    - test
+    type: default
