fix parsing for password and test it on config load
the pure numerical logins and passwords were badly parsed
basic check of validity of credentials at config at app startup to fail early

--- a/factgenie/config_TEMPLATE.yml
+++ b/factgenie/config_TEMPLATE.yml
@@ -4,5 +4,5 @@ host_prefix: ""
 logging_level: INFO
 login:
   active: true
-  username: admin
-  password: factgenie
+  username: "admin"
+  password: "factgenie"
