Split data configuration files between local (empty by default) and available for download

--- a/factgenie/config/datasets.yml
+++ b/factgenie/config/datasets.yml
@@ -5,7 +5,6 @@ datasets:
     enabled: false
     splits:
     - test
-    type: default
   logicnlg:
     class: logicnlg.LogicNLG
     description: Sample of 100 examples from the  <a href="https://github.com/wenhuchen/LogicNLG">LogicNLG</a>
@@ -13,7 +12,6 @@ datasets:
     enabled: true
     splits:
     - test
-    type: table
   quintd1-gsmarena:
     class: gsmarena.GSMArena
     description: <p>The <code>gsmarena</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
@@ -22,7 +20,6 @@ datasets:
     splits:
     - dev
     - test
-    type: json
   quintd1-ice_hockey:
     class: ice_hockey.IceHockey
     description: <p>The <code>ice_hockey</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
@@ -31,7 +28,6 @@ datasets:
     splits:
     - dev
     - test
-    type: json
   quintd1-openweather:
     class: openweather.OpenWeather
     description: <p>The <code>openweather</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
@@ -40,7 +36,6 @@ datasets:
     splits:
     - dev
     - test
-    type: json
   quintd1-owid:
     class: owid.OurWorldInData
     description: <p>The <code>owid</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
@@ -50,7 +45,6 @@ datasets:
     splits:
     - dev
     - test
-    type: table
   quintd1-wikidata:
     class: wikidata.Wikidata
     description: <p>The <code>wikidata</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
@@ -60,7 +54,6 @@ datasets:
     splits:
     - dev
     - test
-    type: table
   xsum:
     class: base.PlainTextDataset
     description: Sample of 100 examples from the <a href="https://github.com/EdinburghNLP/XSum">XSum</a>
@@ -68,11 +61,9 @@ datasets:
     enabled: false
     splits:
     - test
-    type: text
   xsum-debug:
     class: base.PlainTextDataset
     description: ''
-    enabled: false
+    enabled: true
     splits:
     - test
-    type: default
