Modify external datasets config

--- a/factgenie/config/datasets.yml
+++ b/factgenie/config/datasets.yml
@@ -2,68 +2,101 @@ datasets:
   easy-vqa:
     class: base.HTMLDataset
     description: ''
-    enabled: false
     splits:
     - test
   logicnlg:
     class: logicnlg.LogicNLG
     description: Sample of 100 examples from the  <a href="https://github.com/wenhuchen/LogicNLG">LogicNLG</a>
       dataset.
-    enabled: true
     splits:
     - test
   quintd1-gsmarena:
     class: gsmarena.GSMArena
     description: <p>The <code>gsmarena</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
       dataset</a>. </p><p>Contains mobile phone specifications from GSMArena.com.</p>
-    enabled: true
+    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
     splits:
     - dev
     - test
+    outputs:
+    - llama2
+    - mistral
+    - zephyr
+    - gpt-3.5
   quintd1-ice_hockey:
     class: ice_hockey.IceHockey
     description: <p>The <code>ice_hockey</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
       dataset</a>. </p><p>Contains ice hockey game summaries from <a href="https://rapidapi.com/fluis.lacasse/api/icehockeyapi">RapidAPI.com</a>.</p>
-    enabled: true
     splits:
     - dev
     - test
+    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
+    splits:
+    - dev
+    - test
+    outputs:
+    - llama2
+    - mistral
+    - zephyr
+    - gpt-3.5
   quintd1-openweather:
     class: openweather.OpenWeather
     description: <p>The <code>openweather</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
       dataset</a>. </p><p>Contains weather forecasts from <a href="https://openweathermap.org/forecast5">OpenWeather</a>.</p>
-    enabled: true
     splits:
     - dev
     - test
+    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
+    splits:
+    - dev
+    - test
+    outputs:
+    - llama2
+    - mistral
+    - zephyr
+    - gpt-3.5
   quintd1-owid:
     class: owid.OurWorldInData
     description: <p>The <code>owid</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
       dataset</a>. </p><p>Contains health-related time series from <a href="https://ourworldindata.org">Our
       World in Data</a>.</p>
-    enabled: true
     splits:
     - dev
     - test
+    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
+    splits:
+    - dev
+    - test
+    outputs:
+    - llama2
+    - mistral
+    - zephyr
+    - gpt-3.5
   quintd1-wikidata:
     class: wikidata.Wikidata
     description: <p>The <code>wikidata</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
       dataset</a>. </p><p>Contains <a href="https://www.wikidata.org/wiki/Wikidata:Main_Page">wikidata</a>
       entities and their properties.</p>
-    enabled: true
     splits:
     - dev
     - test
+    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
+    splits:
+    - dev
+    - test
+    outputs:
+    - llama2
+    - mistral
+    - zephyr
+    - gpt-3.5
   xsum:
     class: base.PlainTextDataset
     description: Sample of 100 examples from the <a href="https://github.com/EdinburghNLP/XSum">XSum</a>
       dataset.
-    enabled: false
     splits:
     - test
   xsum-debug:
     class: base.PlainTextDataset
     description: ''
-    enabled: true
     splits:
     - test
