--- a/factgenie/config/datasets.yml
+++ b/factgenie/config/datasets.yml
@@ -28,8 +28,8 @@ datasets:
     - zephyr
     - gpt-3.5
     annotations:
-    - gpt-4
-    - human
+    - quintd1-gpt-4
+    - quintd1-human
   quintd1-ice_hockey:
     class: ice_hockey.IceHockey
     description: '<p>The <code>ice_hockey</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1 dataset</a>.  Contains ice hockey game summaries from <a href="https://rapidapi.com/fluis.lacasse/api/icehockeyapi">RapidAPI.com</a>.</p><p><i>Note: annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
@@ -46,8 +46,8 @@ datasets:
     - zephyr
     - gpt-3.5
     annotations:
-    - gpt-4
-    - human
+    - quintd1-gpt-4
+    - quintd1-human
   quintd1-openweather:
     class: openweather.OpenWeather
     description: '<p>The <code>openweather</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1 dataset</a>.  Contains weather forecasts from <a href="https://openweathermap.org/forecast5">OpenWeather</a>.</p><p><i>Note: annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
@@ -64,8 +64,8 @@ datasets:
     - zephyr
     - gpt-3.5
     annotations:
-    - gpt-4
-    - human
+    - quintd1-gpt-4
+    - quintd1-human
   quintd1-owid:
     class: owid.OurWorldInData
     description: '<p>The <code>owid</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
@@ -84,8 +84,8 @@ datasets:
     - zephyr
     - gpt-3.5
     annotations:
-    - gpt-4
-    - human
+    - quintd1-gpt-4
+    - quintd1-human
   quintd1-wikidata:
     class: wikidata.Wikidata
     description: '<p>The <code>wikidata</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1 dataset</a>.  Contains <a href="https://www.wikidata.org/wiki/Wikidata:Main_Page">wikidata</a>
@@ -103,8 +103,8 @@ datasets:
     - zephyr
     - gpt-3.5
     annotations:
-    - gpt-4
-    - human
+    - quintd1-gpt-4
+    - quintd1-human
   xsum-debug:
     class: basic.PlainTextDataset
     description: 'Sample of 5 examples from the <a href="https://github.com/EdinburghNLP/XSum">XSum</a>
