Make dataset ids top-level in the config (remove the redundant 'datasets' key)

--- a/factgenie/config/datasets.yml
+++ b/factgenie/config/datasets.yml
@@ -1,118 +1,116 @@
-datasets:
-  easy-vqa:
-    class: basic.HTMLDataset
-    description: 'A toy visual question answering dataset. Provided as an example dataset loaded by the <code>base.HTMLDataset</code> class.'
-    data-link: https://owncloud.cesnet.cz/index.php/s/3JbbbAxSqX8PSNJ/download
-    source: https://github.com/vzhou842/easy-VQA
-    splits:
-    - test
-  logicnlg-100:
-    class: logicnlg.LogicNLG
-    description: 'Sample of 100 examples from the  <a href="https://github.com/wenhuchen/LogicNLG">LogicNLG</a>
-      dataset. Provided as an example dataset loaded from Huggingface, including post-processing with custom outputs.'
-    source: https://huggingface.co/datasets/kasnerz/logicnlg
-    splits:
-    - test
-    outputs:
-    - gpt4-direct-2shotcot
-  quintd1-gsmarena:
-    class: gsmarena.GSMArena
-    description: '<p>The <code>gsmarena</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1 dataset</a>.  Contains mobile phone specifications from GSMArena.com.</p><p><i>Note: annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
-    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
-    splits:
-    - dev
-    - test
-    outputs:
-    - llama2
-    - mistral
-    - zephyr
-    - gpt-3.5
-    annotations:
-    - quintd1-gpt-4
-    - quintd1-human
-  quintd1-ice_hockey:
-    class: ice_hockey.IceHockey
-    description: '<p>The <code>ice_hockey</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1 dataset</a>.  Contains ice hockey game summaries from <a href="https://rapidapi.com/fluis.lacasse/api/icehockeyapi">RapidAPI.com</a>.</p><p><i>Note: annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
-    splits:
-    - dev
-    - test
-    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
-    splits:
-    - dev
-    - test
-    outputs:
-    - llama2
-    - mistral
-    - zephyr
-    - gpt-3.5
-    annotations:
-    - quintd1-gpt-4
-    - quintd1-human
-  quintd1-openweather:
-    class: openweather.OpenWeather
-    description: '<p>The <code>openweather</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1 dataset</a>.  Contains weather forecasts from <a href="https://openweathermap.org/forecast5">OpenWeather</a>.</p><p><i>Note: annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
-    splits:
-    - dev
-    - test
-    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
-    splits:
-    - dev
-    - test
-    outputs:
-    - llama2
-    - mistral
-    - zephyr
-    - gpt-3.5
-    annotations:
-    - quintd1-gpt-4
-    - quintd1-human
-  quintd1-owid:
-    class: owid.OurWorldInData
-    description: '<p>The <code>owid</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
-      dataset</a>.  Contains health-related time series from <a href="https://ourworldindata.org">Our
-      World in Data</a>. <p><i>Note: annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
-    splits:
-    - dev
-    - test
-    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
-    splits:
-    - dev
-    - test
-    outputs:
-    - llama2
-    - mistral
-    - zephyr
-    - gpt-3.5
-    annotations:
-    - quintd1-gpt-4
-    - quintd1-human
-  quintd1-wikidata:
-    class: wikidata.Wikidata
-    description: '<p>The <code>wikidata</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1 dataset</a>.  Contains <a href="https://www.wikidata.org/wiki/Wikidata:Main_Page">wikidata</a>
-      entities and their properties.</p><p><i>Note: annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
-    splits:
-    - dev
-    - test
-    source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
-    splits:
-    - dev
-    - test
-    outputs:
-    - llama2
-    - mistral
-    - zephyr
-    - gpt-3.5
-    annotations:
-    - quintd1-gpt-4
-    - quintd1-human
-  xsum-debug:
-    class: basic.PlainTextDataset
-    description: 'Sample of 5 examples from the <a href="https://github.com/EdinburghNLP/XSum">XSum</a>
-      dataset.'
-    data-link: "https://owncloud.cesnet.cz/index.php/s/W3eYWbEfCyKqHEl/download"
-    outputs-link: "https://owncloud.cesnet.cz/index.php/s/fbQGSTaMohfhShs/download"
-    source: https://github.com/EdinburghNLP/XSum
-    splits:
-    - test
-    outputs:
-    - gold
+easy-vqa:
+  class: basic.HTMLDataset
+  data-link: https://owncloud.cesnet.cz/index.php/s/3JbbbAxSqX8PSNJ/download
+  description: A toy visual question answering dataset. Provided as an example dataset
+    loaded by the <code>base.HTMLDataset</code> class.
+  source: https://github.com/vzhou842/easy-VQA
+  splits:
+  - test
+logicnlg-100:
+  class: logicnlg.LogicNLG
+  description: Sample of 100 examples from the  <a href="https://github.com/wenhuchen/LogicNLG">LogicNLG</a>
+    dataset. Provided as an example dataset loaded from Huggingface, including post-processing
+    with custom outputs.
+  outputs:
+  - gpt4-direct-2shotcot
+  source: https://huggingface.co/datasets/kasnerz/logicnlg
+  splits:
+  - test
+quintd1-gsmarena:
+  annotations:
+  - quintd1-gpt-4
+  - quintd1-human
+  class: gsmarena.GSMArena
+  description: '<p>The <code>gsmarena</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
+    dataset</a>.  Contains mobile phone specifications from GSMArena.com.</p><p><i>Note:
+    annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
+  outputs:
+  - llama2
+  - mistral
+  - zephyr
+  - gpt-3.5
+  source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
+  splits:
+  - dev
+  - test
+quintd1-ice_hockey:
+  annotations:
+  - quintd1-gpt-4
+  - quintd1-human
+  class: ice_hockey.IceHockey
+  description: '<p>The <code>ice_hockey</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
+    dataset</a>.  Contains ice hockey game summaries from <a href="https://rapidapi.com/fluis.lacasse/api/icehockeyapi">RapidAPI.com</a>.</p><p><i>Note:
+    annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
+  outputs:
+  - llama2
+  - mistral
+  - zephyr
+  - gpt-3.5
+  source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
+  splits:
+  - dev
+  - test
+quintd1-openweather:
+  annotations:
+  - quintd1-gpt-4
+  - quintd1-human
+  class: openweather.OpenWeather
+  description: '<p>The <code>openweather</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
+    dataset</a>.  Contains weather forecasts from <a href="https://openweathermap.org/forecast5">OpenWeather</a>.</p><p><i>Note:
+    annotations and GPT-3.5 outputs are available only for the test set.</i></p>'
+  outputs:
+  - llama2
+  - mistral
+  - zephyr
+  - gpt-3.5
+  source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
+  splits:
+  - dev
+  - test
+quintd1-owid:
+  annotations:
+  - quintd1-gpt-4
+  - quintd1-human
+  class: owid.OurWorldInData
+  description: '<p>The <code>owid</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
+    dataset</a>.  Contains health-related time series from <a href="https://ourworldindata.org">Our
+    World in Data</a>. <p><i>Note: annotations and GPT-3.5 outputs are available only
+    for the test set.</i></p>'
+  outputs:
+  - llama2
+  - mistral
+  - zephyr
+  - gpt-3.5
+  source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
+  splits:
+  - dev
+  - test
+quintd1-wikidata:
+  annotations:
+  - quintd1-gpt-4
+  - quintd1-human
+  class: wikidata.Wikidata
+  description: '<p>The <code>wikidata</code> subset of the <a href="https://github.com/kasnerz/quintd/">quintd-1
+    dataset</a>.  Contains <a href="https://www.wikidata.org/wiki/Wikidata:Main_Page">wikidata</a>
+    entities and their properties.</p><p><i>Note: annotations and GPT-3.5 outputs
+    are available only for the test set.</i></p>'
+  outputs:
+  - llama2
+  - mistral
+  - zephyr
+  - gpt-3.5
+  source: https://github.com/kasnerz/quintd/tree/main/data/quintd-1
+  splits:
+  - dev
+  - test
+xsum-debug:
+  class: basic.PlainTextDataset
+  data-link: https://owncloud.cesnet.cz/index.php/s/W3eYWbEfCyKqHEl/download
+  description: Sample of 5 examples from the <a href="https://github.com/EdinburghNLP/XSum">XSum</a>
+    dataset.
+  outputs:
+  - gold
+  outputs-link: https://owncloud.cesnet.cz/index.php/s/fbQGSTaMohfhShs/download
+  source: https://github.com/EdinburghNLP/XSum
+  splits:
+  - test
