--- a/factgenie/config/llm-gen/ollama-d2t.yaml
+++ b/factgenie/config/llm-gen/ollama-d2t.yaml
@@ -6,12 +6,11 @@ model: llama3
 # If you run ollama at the same machine as factgenie let's use just localhost.
 api_url: http://localhost:11434/api/
 model_args:
-  max_tokens: 1024
-  num_beams: 1
-  temperature: 0.0
+model_args:
+  num_predict: 1024
+  temperature: 0.7
   top_p: 1.0
   top_k: 0.0
-  do_sample: false 
   seed: 42
 system_msg: "You are an expert data-to-text system. You understand structured data and you can correctly operate with units and numerical values. You are designed to output plain text summaries from structured data input."
 start_with: "Sure, here is the required output:\n\""
