--- a/factgenie/config/llm-eval/openai-gpt3.5-eval.yaml
+++ b/factgenie/config/llm-eval/openai-gpt3.5-eval.yaml
@@ -1,5 +1,6 @@
 type: openai_metric
-model: gpt-3.5-turbo-1106
+model: gpt-4o-mini-2024-07-18
+# model: gpt-3.5-turbo-1106
 # model: "gpt-4-1106-preview"
 system_msg: "You are an expert data-to-text error annotation system. You undestand structured data and you can correcly operate with units and numerical values. You are designed to output token-level annotations in JSON."
 annotation_span_categories: 
