--- a/factgenie/config/llm-gen/ollama-d2t.yaml
+++ b/factgenie/config/llm-gen/ollama-d2t.yaml
@@ -15,7 +15,7 @@ model_args:
 system_msg: "You are an expert data-to-text system. You understand structured data and you can correctly operate with units and numerical values. You are designed to output plain text summaries from structured data input."
 start_with: "Sure, here is the required output:\n\""
 extra_args:
-  rstrip: '"'
+  remove_suffix: '"'
 prompt_template: |
   Given the data:
   ```
