--- a/factgenie/config/llm-gen/ollama-d2t.yaml
+++ b/factgenie/config/llm-gen/ollama-d2t.yaml
@@ -7,11 +7,12 @@ model: llama3
 api_url: http://localhost:11434/api/
 model_args:
 model_args:
+  num_ctx: 8192
   num_predict: 1024
-  temperature: 0.7
-  top_p: 1.0
-  top_k: 0.0
   seed: 42
+  temperature: 1.0
+  top_k: 50
+  top_p: 0.9
 system_msg: "You are an expert data-to-text system. You understand structured data and you can correctly operate with units and numerical values. You are designed to output plain text summaries from structured data input."
 start_with: "Sure, here is the required output:\n\""
 extra_args:
