--- a/factgenie/config/llm-gen/ollama-summarization.yaml
+++ b/factgenie/config/llm-gen/ollama-summarization.yaml
@@ -3,11 +3,12 @@ extra_args:
   remove_suffix: '"'
 model: llama3
 model_args:
+  num_ctx: 8192
   num_predict: 1024
-  temperature: 0.7
-  top_p: 1.0
-  top_k: 0.0
   seed: 42
+  temperature: 1.0
+  top_k: 50
+  top_p: 0.9
 prompt_template: |-
   Given the original text:
   """
