--- a/factgenie/config/llm-eval/ollama-llama3-eval.yaml
+++ b/factgenie/config/llm-eval/ollama-llama3-eval.yaml
@@ -14,12 +14,16 @@ model_args:
 annotation_span_categories:
   - name: "Incorrect"
     color: "#ffbcbc"
+    description: "The fact in the text contradicts the data."
   - name: "Not checkable"
     color: "#e9d2ff"
+    description: "The fact in the text cannot be checked given the data."
   - name: "Misleading"
     color: "#fff79f"
+    description: "The fact in the text is misleading in the given context."
   - name: "Other"
     color: "#bbbbbb"
+    description: "The text is problematic for another reason, e.g. grammatically or stylistically incorrect, irrelevant, or repetitive."
 prompt_template: |
   Given the data:
   ```
