--- a/factgenie/config/llm-eval/openai-gpt3.5-eval.yaml
+++ b/factgenie/config/llm-eval/openai-gpt3.5-eval.yaml
@@ -3,15 +3,19 @@ model: gpt-4o-mini-2024-07-18
 # model: gpt-3.5-turbo-1106
 # model: "gpt-4-1106-preview"
 system_msg: "You are an expert data-to-text error annotation system. You undestand structured data and you can correcly operate with units and numerical values. You are designed to output token-level annotations in JSON."
-annotation_span_categories: 
+annotation_span_categories:
   - name: "Incorrect"
     color: "#ffbcbc"
+    description: "The fact in the text contradicts the data."
   - name: "Not checkable"
     color: "#e9d2ff"
+    description: "The fact in the text cannot be checked given the data."
   - name: "Misleading"
     color: "#fff79f"
+    description: "The fact in the text is misleading in the given context."
   - name: "Other"
     color: "#bbbbbb"
+    description: "The text is problematic for another reason, e.g. grammatically or stylistically incorrect, irrelevant, or repetitive."
 prompt_template: |
   Given the data:
   ```
