--- a/factgenie/config/config_TEMPLATE.yml
+++ b/factgenie/config/config_TEMPLATE.yml
@@ -1,8 +1,9 @@
 ---
-debug: true
 host_prefix: ""
-logging_level: INFO
+logging:
+  level: INFO
+  flask_debug: false
 login:
-  active: true
-  username: "admin"
-  password: "factgenie"
+  active: false
+  username: admin
+  password: factgenie
