--- a/.github/workflows/black_check.yml
+++ b/.github/workflows/black_check.yml
@@ -2,9 +2,9 @@ name: Black Code Style Check
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, release-1.0.0]
   pull_request:
-    branches: [ main ]
+    branches: [ main, release-1.0.0]
 
 jobs:
 
