--- a/.github/workflows/py311_tests.yml
+++ b/.github/workflows/py311_tests.yml
@@ -2,9 +2,9 @@ name: Python CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, release-1.0.0]
   pull_request:
-    branches: [ main ]
+    branches: [ main, release-1.0.0]
 
 jobs:
 
