--- a/.github/workflows/py311_tests.yml
+++ b/.github/workflows/py311_tests.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .[test]
+        pip install -e .[test]
     - name: Run tests
       run: |
         pytest
