--- a/factgenie/config/default_prompts.yml
+++ b/factgenie/config/default_prompts.yml
@@ -21,7 +21,7 @@ llm_eval: |
   ```
   Instructions for annotating the text:
 
-  Output the errors as a JSON list "annotations" in which each object contains fields "reason", "text", and "type". The value of "reason" is the reason for the annotation. The value of "text" is the literal value of the text inside the highlighted span, so that the span can later be identified using string matching. The value of "type" is an integer index of the error based on the following list:
+  Output the errors as a JSON list "annotations" in which each object contains fields "reason", "text", and "annotation_type". The value of "reason" is the reason for the annotation. The value of "text" is the literal value of the text inside the highlighted span, so that the span can later be identified using string matching. The value of "annotation_type" is an integer index of the error based on the following list:
 
   {error_list}
 
