--- a/factgenie/config/llm-eval/example-openai-gpt-4o-mini-eval.yaml
+++ b/factgenie/config/llm-eval/example-openai-gpt-4o-mini-eval.yaml
@@ -25,7 +25,7 @@ prompt_template: |
   ```
   {text}
   ```
-  Output the errors as a JSON list "annotations" in which each object contains fields  "reason", "text", and "error_type". The value of "text" is the text of the error. The value of "reason" is the reason for the error. The value of "error_type" is one of {0, 1, 2, 3} based on the following list:
+  Output the errors as a JSON list "annotations" in which each object contains fields  "reason", "text", and "annotation_type". The value of "text" is the text of the error. The value of "reason" is the reason for the error. The value of "annotation_type" is one of {0, 1, 2, 3} based on the following list:
   - 0: Incorrect fact: The fact in the text contradicts the data.
   - 1: Not checkable: The fact in the text cannot be checked in the data.
   - 2: Misleading: The fact in the text is misleading in the given context.
@@ -46,6 +46,6 @@ prompt_template: |
   Nokia 3310 is produced in Finland and features a 320x320 display. It is available in black color. The data seem to provide only partial information about the phone.
   ```
   output:
-  ```{ "annotations": [{"reason": "The country where the phone is produced is not mentioned in the data.", "text": "produced in Finland", "error_type": 1}, {"reason": "The data mentions that the display has resolution 320x240px.", "text": "320x320", "error_type": 0}, {"reason": "Misleadingly suggests that the phone is not available in other colors.", "text": "available in black color", "error_type": 2}, {"reason": "The note is irrelevant for the phone description.", "text": "The data seem to provide only partial information about the phone.", "error_type": 3}] }
+  ```{ "annotations": [{"reason": "The country where the phone is produced is not mentioned in the data.", "text": "produced in Finland", "annotation_type": 1}, {"reason": "The data mentions that the display has resolution 320x240px.", "text": "320x320", "annotation_type": 0}, {"reason": "Misleadingly suggests that the phone is not available in other colors.", "text": "available in black color", "annotation_type": 2}, {"reason": "The note is irrelevant for the phone description.", "text": "The data seem to provide only partial information about the phone.", "annotation_type": 3}] }
   ```
   Note that some details may not be mentioned in the text: do not count omissions as errors. Also do not be too strict: some facts can be less specific than in the data (rounded values, shortened or abbreviated text, etc.), do not count these as errors. If there are no errors in the text, "annotations" will be an empty list.
