--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,12 @@
 [tool.black]
 line-length = 120
 target-version = ['py39']
+force-exclude = '''
+/(
+    \.git
+  | \.github
+)/
+'''
+
+[tool.isort]
+profile="black"
