--- a/factgenie/config/resources.yml
+++ b/factgenie/config/resources.yml
@@ -122,3 +122,21 @@ xsum-debug:
   source: https://github.com/EdinburghNLP/XSum
   splits:
   - test
+propaganda-techniques:
+  name: propaganda-techniques
+  class: propaganda_techniques.PropagandaTechniques
+  annotations:
+      - PTC
+  description: 'The Propaganda Techniques Corpus (PTC) is a corpus of propagandistic techniques at annotated by 6 pro-annotators in spans.
+    The corpus includes 451 articles (350k tokens) from 48 news outlets. 
+    The corpus accompanied paper [Fine-Grained Analysis of Propaganda in News Article](https://aclanthology.org/D19-1565/).
+    The labels are:
+Loaded Language, Name Calling&Labeling, Repetition, Exaggeration&Minimization, Doubt, Appeal to fear-prejudice, Flag-Waving, Causal Oversimplification, Slogans, Appeal to Authority, Black-and-White Fallacy, Thought-terminating Cliches, Whataboutism, Reductio ad Hitlerum, Red Herring, Bandwagon, Obfuscation&Intentional&Vagueness&Confusion, Straw Men'
+  data-link: https://owncloud.cesnet.cz/index.php/s/e5OKV8XF9LaQATj/download
+  source: https://web.archive.org/web/20210922205158/https://propaganda.qcri.org/data/fine_grained_propaganda_code.zip
+  outputs:
+    - identical 
+  splits:
+    - train
+    - dev
+    - test
