--- a/.github/workflows/black_check.yml
+++ b/.github/workflows/black_check.yml
@@ -23,4 +23,4 @@ jobs:
         pip install black==24.10.0
     - name: Run Black
       run: |
-        black --check .
+        black --check --target-version py39 .
