--- a/factgenie/config/llm-eval/example-ollama-llama3-eval.yaml
+++ b/factgenie/config/llm-eval/example-ollama-llama3-eval.yaml
@@ -13,16 +13,16 @@ model_args:
   seed: 42
 annotation_span_categories:
   - name: "Incorrect"
-    color: "#ffbcbc"
+    color: "rgb(214, 39, 40)"
     description: "The fact in the text contradicts the data."
   - name: "Not checkable"
-    color: "#e9d2ff"
+    color: "rgb(148, 103, 189)"
     description: "The fact in the text cannot be checked given the data."
   - name: "Misleading"
-    color: "#fff79f"
+    color: "rgb(230, 171, 2)"
     description: "The fact in the text is misleading in the given context."
   - name: "Other"
-    color: "#bbbbbb"
+    color: "rgb(102, 102, 102)"
     description: "The text is problematic for another reason, e.g. grammatically or stylistically incorrect, irrelevant, or repetitive."
 prompt_template: |
   Given the data:
