--- a/factgenie/config/crowdsourcing/example.yaml
+++ b/factgenie/config/crowdsourcing/example.yaml
@@ -1,4 +1,5 @@
 annotation_granularity: words
+annotation_overlap_allowed: false
 annotation_span_categories:
 - color: rgb(214, 39, 40)
   description: The fact in the text contradicts the data.
