--- a/.gitignore
+++ b/.gitignore
@@ -14,12 +14,8 @@ build
 dist
 venv/
 wiki
+
+# Here we track these externally
 factgenie/campaigns
-factgenie/templates/campaigns/*
-factgenie/data/datasets.yml
-factgenie/data/inputs
-factgenie/data/outputs
-factgenie/config/config.yml
-factgenie/config/llm-eval
-factgenie/config/llm-gen
-factgenie/config/crowdsourcing
+factgenie/data
+factgenie/config
