Use simpler names for model providers

--- a/factgenie/config/llm-eval/example-tutorial.yaml
+++ b/factgenie/config/llm-eval/example-tutorial.yaml
@@ -1,4 +1,4 @@
-type: openai_metric
+type: openai
 system_msg: You are an expert error annotation system. You undestand structured data
   and you can correcly operate with units and numerical values. You are designed to
   output token-level annotations in JSON.
