--- a/factgenie/config/llm-eval/example-ollama-llama3-eval.yaml
+++ b/factgenie/config/llm-eval/example-ollama-llama3-eval.yaml
@@ -1,10 +1,10 @@
-type: ollama_metric
-model: llama3.1:8b
+type: ollama
+model: llama3.3
 # You can run ollama alson on other machine than factgenie 
 #  e.g. we run it on a machine tdll-3gpu3 and access it from any machine which is withing the same firewall
 #  in that case we use api_url: http://tdll-3gpu3.ufal.hide.ms.mff.cuni.cz:11434/api/
 # If you run ollama at the same machine as factgenie let's use just localhost.
-api_url: http://localhost:11434/api/
+api_url: http://localhost:11434
 model_args:
   num_ctx: 32768
   num_predict: 1024
